# orders-cometa

./: Makefile  README.md  docker-compose.yml
orders-backend/: Dockerfile  pyproject.toml
orders-backend/db/: fixtures.py  repositories.py
orders-backend/src/core/: domain.py
orders-backend/src/orders/: domain.py  exceptions.py  repositories.py  use_cases.py
orders-backend/tests/: conftest.py  test_orders.py
orders-backend/web/: bootstrap.py  main.py
orders-backend/web/orders/: routes.py  serializers.py
orders-frontend/: Dockerfile  package-lock.json  package.json
orders-frontend/src/app/: layout.tsx  page.tsx  types.ts
orders-frontend/src/components/: order-actions.ts  order-detail.tsx  order-input.tsx  order-section.tsx
